gccida/g3/mark_home_live
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_home_live/src/reload1.c:2574:40: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v2) - 5) < 2) + 1; 
                                       ^~~~~~~~~~~~
                                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_home_live/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_home_live/src/obj/reload1.o] Error 1
